<resources>
    <string name="app_name">WechselgeldApp</string>

    <!-- Navigation -->
    <string name="nav_home">Start</string>
    <string name="nav_connect">Koppeln</string>
    <string name="nav_transactions">Transaktionen</string>
    <string name="nav_history">Verlauf</string>

    <!-- Bluetooth & Geräte -->
    <string name="bluetooth_ger_t">Bluetooth-Gerät</string>
    <string name="ger_tename">Gerätename</string>
    <string name="nicht_gekoppelt">Nicht gekoppelt</string>
    <string name="paired">Gekoppelt</string>
    <string name="not_paired">Nicht gekoppelt</string>
    <string name="scanning">Scanne...</string>
    <string name="scan_complete">Scan abgeschlossen</string>
    <string name="scan">Scannen</string>
    <string name="stop_scan">Scan stoppen</string>
    <string name="tippen_zum_koppeln">Tippen zum Koppeln</string>

    <!-- Fehler & Hinweise -->
    <string name="error_enter_amount">Bitte Betrag eingeben</string>
    <string name="error_invalid_amount">Ungültiges Betragsformat</string>
    <string name="error_not_connected">Keine Verbindung</string>
    <string name="send_failed">Senden fehlgeschlagen</string>
    <string name="sent_amount">Gesendet: €%1$s</string>

    <!-- Login -->
    <string name="login_title">Login</string>
    <string name="hint_username">Benutzername</string>
    <string name="hint_password">Passwort</string>
    <string name="btn_login">Anmelden</string>
    <string name="login_hint">Sie haben noch kein Konto?</string>
    <string name="link_register">Registrieren</string>

    <!-- Registrierung -->
    <string name="registration_title">Registrieren</string>
    <string name="hint_email">E-Mail</string>
    <string name="btn_register">Registrieren</string>
    <string name="register_hint">Sie haben schon ein Konto?</string>
    <string name="link_login">Einloggen</string>

    <!-- Zahlungsdaten -->
    <string name="current_balance">Aktuelles Guthaben</string>
    <string name="invoice_amount">Rechnungsbetrag</string>
    <string name="remaining_amount">Fälliger Restbetrag</string>
    <string name="enter_amount">Zahlbetrag festlegen</string>
    <string name="amount_5">€5</string>
    <string name="amount_10">€10</string>
    <string name="amount_20">€20</string>
    <string name="custom_amount">Anderer Betrag (€)</string>
    <string name="selected_amount">Ausgewählter Betrag:</string>
    <string name="send_payment">Zahlung senden</string>
    <string name="no_invoice_received">Kein Rechnungsbetrag empfangen</string>
    <string name="not_enough_balance">Nicht genug Guthaben</string>


    <!-- Profil -->
    <string name="profile_title">Profil</string>
    <string name="personal_info">Persönliche Informationen</string>
    <string name="change_password">Passwort ändern</string>
    <string name="save">Speichern</string>
    <string name="status_label">Scannen nach Geräten</string>
    <string name="last_payment">Letzte Zahlung</string>
    <string name="sample_shop_name">Bäckerei Müller</string>
    <string name="monthly_expenses">Monatliche Ausgaben</string>
    <string name="sample_change">Guthaben</string>
    <string name="your_favorites">Deine Favoriten</string>
    <string name="current_offers">Angebote</string>
    <string name="_00_00_00_00_00_00">00:00:00:00:00:00</string>

    <string name="amount_1">+1€</string>
    <string name="amount_2">+2€</string>
    <string name="amount_3">+3€</string>
    <string name="amount_to_pay">Zu bezahlender Betrag:</string>

</resources>
